[package]
name = "rscan"
version = "0.1.1"
edition = "2024"
build = "build.rs"

[dependencies]
futures = "0.3"
tokio = { version = "1", features = ["full"] }  # 使用 Tokio 异步运行时
structopt = "0.3.26"
ipnetwork = "0.21"
colored = "3.0.0"
colorful = "0.3.2"
image_ascii = "0.1.1"
once_cell = "1.19"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["clock"] }
rust_xlsxwriter = "0.84"
calamine = "0.26"
rusqlite = { version = "0.31", features = ["bundled"] }


[[bench]]
name = "scan_benchmark"
harness = false

[build-dependencies]
winres = "0.1"